--- a/footer/SkyGround.html
+++ b/footer/SkyGround.html
@@ -2177,8 +2177,8 @@
                 <li class="contact-box">
                   <p>
                     <span class="contact-box-title">員林</span
-                    ><span>TEL</span> 04‐8365-288 &nbsp;&thinsp;｜
-                    <span>FAX</span> 04‐8365-399
+                    ><span>TEL</span> 04‐8365-288&nbsp;｜
+                    <span>FAX</span>04‐8365-399
                   </p>
                 </li>
                 <li class="contact-box">
